force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <label>Expected ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>