force-app/main/default/objects/Opportunity/fields/Amended_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Amended_Contract_Id__c</fullName>
    <label>Amended Contract Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>