force-app/main/default/objects/Opportunity/fields/Amended_Renewed_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Amended_Renewed_Contract_Status__c</fullName>
    <label>Amended/Renewed Contract Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>