force-app/main/default/objects/Opportunity/fields/Approx_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Approx_Order_Value__c</fullName>
    <label>Approx Order Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-5L</fullName>
            </value>
            <value>
                <fullName>5-10L</fullName>
            </value>
            <value>
                <fullName>10-25L</fullName>
            </value>
            <value>
                <fullName>25-50L</fullName>
            </value>
            <value>
                <fullName>50-1Cr</fullName>
            </value>
            <value>
                <fullName>Above 1Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>