force-app/main/default/objects/Opportunity/fields/BillToSameasSupportTo__c.field-meta.xml
<CustomField>
    <fullName>BillToSameasSupportTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill To Same as Support To</label>
    <type>Checkbox</type>
</CustomField>