force-app/main/default/objects/Opportunity/fields/BU_wise_Requirement__c.field-meta.xml
<CustomField>
    <fullName>BU_wise_Requirement__c</fullName>
    <label>BU wise Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU_Wise_Requirement</valueSetName>
    </valueSet>
</CustomField>