force-app/main/default/objects/Opportunity/fields/Can_we_get_a_Conditional_PO__c.field-meta.xml
<CustomField>
    <fullName>Can_we_get_a_Conditional_PO__c</fullName>
    <label>Can we get a Conditional PO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>