force-app/main/default/objects/Opportunity/fields/ClosedRemarks__c.field-meta.xml
<CustomField>
    <fullName>ClosedRemarks__c</fullName>
    <label>Closed Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>