force-app/main/default/objects/Opportunity/fields/Contract_Tenure_Month__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>