force-app/main/default/objects/Opportunity/fields/Contract_Tenure_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenure_Year__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>