force-app/main/default/objects/Opportunity/fields/Converted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted Opportunity</label>
    <type>Checkbox</type>
</CustomField>