force-app/main/default/objects/Opportunity/fields/Does_Customer_Have_ERP__c.field-meta.xml
<CustomField>
    <fullName>Does_Customer_Have_ERP__c</fullName>
    <label>Does Customer Have ERP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>