force-app/main/default/objects/Opportunity/fields/End_Customer_Project__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Project__c</fullName>
    <inlineHelpText>Please enter end customer or project name in case this deal is with Alliance Partner</inlineHelpText>
    <label>End Customer/Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>