force-app/main/default/objects/Opportunity/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <label>ERP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Does_Customer_Have_ERP__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Adrenalin</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>