force-app/main/default/objects/Opportunity/fields/ExpectedTotalARC__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTotalARC__c</fullName>
    <label>Expected Total ARC</label>
    <summarizedField>OpportunityLineItem.ExpectedARC__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>