force-app/main/default/objects/Opportunity/fields/ExpectedTotalOTC__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTotalOTC__c</fullName>
    <label>Expected Total OTC</label>
    <summarizedField>OpportunityLineItem.ExpectedOTC__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>