force-app/main/default/objects/Opportunity/fields/India_Region__c.field-meta.xml
<CustomField>
    <fullName>India_Region__c</fullName>
    <label>India Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India1</fullName>
            </value>
            <value>
                <fullName>India2</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Govt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>