force-app/main/default/objects/Opportunity/fields/Is_budgetary_value_shared_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_budgetary_value_shared_with_Customer__c</fullName>
    <label>Is budgetary value shared with Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>