force-app/main/default/objects/Opportunity/fields/Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Date__c</fullName>
    <description>Date to be enterred for Deferred Opportunities</description>
    <inlineHelpText>Mandatory for Deferred Opportunities, cannot be less than 20 days from Today.</inlineHelpText>
    <label>Next Contact Date</label>
    <type>Date</type>
</CustomField>