force-app/main/default/objects/Opportunity/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Steps (old)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>