force-app/main/default/objects/Opportunity/fields/Number_Of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Months__c</fullName>
    <formula>IF( Contract_Tenure_Year__c &gt; 0, Contract_Tenure_Year__c * 12 , 0) 
+
IF( Contract_Tenure_Month__c &gt; 0, Contract_Tenure_Month__c , 0) 
+ 
IF( Contract_Tenure_Days__c &gt; 0, Contract_Tenure_Days__c / 30 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>