force-app/main/default/objects/Opportunity/fields/OEM_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>OEM_Company_Name__c</fullName>
    <label>OEM Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airtel</fullName>
            </value>
            <value>
                <fullName>AMD</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Commvault</fullName>
            </value>
            <value>
                <fullName>Comscope</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Forninet</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
                <label>Hewlett Packard Enterprise</label>
            </value>
            <value>
                <fullName>Hitachi Vantara</fullName>
            </value>
            <value>
                <fullName>IBM India Private Limited</fullName>
            </value>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>Jio</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>NetApps</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
            <value>
                <fullName>OnetouchInfra</fullName>
            </value>
            <value>
                <fullName>PiDC</fullName>
            </value>
            <value>
                <fullName>Radware</fullName>
            </value>
            <value>
                <fullName>Redhat</fullName>
            </value>
            <value>
                <fullName>SuperMicro</fullName>
            </value>
            <value>
                <fullName>TCL</fullName>
            </value>
            <value>
                <fullName>TTML</fullName>
            </value>
            <value>
                <fullName>Veeam</fullName>
            </value>
            <value>
                <fullName>VMWare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>