force-app/main/default/objects/Opportunity/fields/Opportunity_ACV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ACV__c</fullName>
    <inlineHelpText>Annual contract value of opportunity</inlineHelpText>
    <label>Opportunity ACV</label>
    <summarizedField>OpportunityLineItem.ExpectedARC__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>