force-app/main/default/objects/Opportunity/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Id</label>
    <type>AutoNumber</type>
</CustomField>