force-app/main/default/objects/Opportunity/fields/Partner_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Sales Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>