force-app/main/default/objects/Opportunity/fields/Partner_Secondary_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Secondary_Manager__c</fullName>
    <formula>PartnerSecondary__r.Partner_Manager__r.FirstName + &apos; &apos; + PartnerSecondary__r.Partner_Manager__r.LastName</formula>
    <label>Partner - Secondary Manager</label>
    <type>Text</type>
</CustomField>