force-app/main/default/objects/Opportunity/fields/Partner_Tertiary_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tertiary_Manager__c</fullName>
    <formula>PartnerTertiary__r.Partner_Manager__r.FirstName + &apos; &apos; + PartnerTertiary__r.Partner_Manager__r.LastName</formula>
    <label>Partner - Tertiary Manager</label>
    <type>Text</type>
</CustomField>