force-app/main/default/objects/Opportunity/fields/PartnerSecondary__c.field-meta.xml
<CustomField>
    <fullName>PartnerSecondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner - Secondary</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (4 AND 5) OR 6</booleanFilter>
        <filterItems>
            <field>Account.Partner_Check__c</field>
            <operation>contains</operation>
            <valueField>$Source.SecondarySource__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.SBQQ__Renewal__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.SBQQ__AmendedContract__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.SBQQ__Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.SBQQ__RenewedContract__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.SBQQ__AmendedContract__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner - Secondary)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>