force-app/main/default/objects/Opportunity/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>POC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>