force-app/main/default/objects/Opportunity/fields/POC_Stage__c.field-meta.xml
<CustomField>
    <fullName>POC_Stage__c</fullName>
    <label>POC Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POC in Process</fullName>
            </value>
            <value>
                <fullName>Under Implementation</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>POC Successful PO Awaited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>