force-app/main/default/objects/Opportunity/fields/POC_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Type__c</fullName>
    <formula>IF( ISPICKVAL(POC__c , &apos;Yes&apos;), 
    IF( Owner.Profile.Name = &apos;Yotta Partner Manager Profile&apos; , 
        &apos;Partner POC&apos;,
        &apos;Customer POC&apos;
    ),
    &apos;&apos;
)</formula>
    <label>POC Type</label>
    <type>Text</type>
</CustomField>