force-app/main/default/objects/Opportunity/fields/PoliticalAlignment__c.field-meta.xml
<CustomField>
    <fullName>PoliticalAlignment__c</fullName>
    <label>Political Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>