force-app/main/default/objects/Opportunity/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Primary Campaign Source)</relationshipLabel>
    <relationshipName>PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>