force-app/main/default/objects/Opportunity/fields/Primary_Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Manager__c</fullName>
    <formula>PartnerPrimary__r.Partner_Manager__r.FirstName + &apos; &apos; + PartnerPrimary__r.Partner_Manager__r.LastName</formula>
    <label>Primary - Partner Manager</label>
    <type>Text</type>
</CustomField>