force-app/main/default/objects/Opportunity/fields/PrimarySourceCreditAllocation__c.field-meta.xml
<CustomField>
    <fullName>PrimarySourceCreditAllocation__c</fullName>
    <label>Primary Source Credit Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>