force-app/main/default/objects/Opportunity/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>Customer&apos;s Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>DC Build</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Network &amp; Connectivity</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>YottaSafe</fullName>
            </value>
            <value>
                <fullName>HardCat Asset Management</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Adrenalin</fullName>
            </value>
            <value>
                <fullName>Tussom</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>AI/ML</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>University Management</fullName>
            </value>
            <value>
                <fullName>Bank-in-a-box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>