force-app/main/default/objects/Opportunity/fields/Promoter_s_Support_Required__c.field-meta.xml
<CustomField>
    <fullName>Promoter_s_Support_Required__c</fullName>
    <label>Support Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>